added concurrent tests